[UPD] Implement delete user token API and update related services
